Rydder opp i koden og fjerner ubrukt kode og unødvendig komplekistet. (#598)
* Rydder opp i koden og fjerner ubrukt kode og unødvendig komplekistet.

* Allure rydder